Cover fix and partners alignment

--- a/wp-content/themes/texte-tekst/assets/scss/components/_cover.scss
+++ b/wp-content/themes/texte-tekst/assets/scss/components/_cover.scss
@@ -3,6 +3,7 @@
 	img {
 		width: 100%;
 		height: auto;
+		vertical-align: middle;
 	}
 
 	.lang-fr & {
