--- a/wp-content/themes/texte-tekst/assets/scss/components/_partners.scss
+++ b/wp-content/themes/texte-tekst/assets/scss/components/_partners.scss
@@ -7,6 +7,7 @@
 		z-index: 2;
 		@include flex;
 		padding: rem(100) 0;
+		justify-content: center;
 	}
 
 	h2 {
@@ -14,6 +15,7 @@
 		font-weight: 800;
 		font-size: 1.8rem;
 		color: $gray;
+		display: none;
 	}
 
 	.partner-loop {
